added detailed VSCode installation and usage

--- a/session1/python-1.ipynb
+++ b/session1/python-1.ipynb
@@ -135,11 +135,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Zen of Python, by Tim Peters\n",
+      "\n",
+      "Beautiful is better than ugly.\n",
+      "Explicit is better than implicit.\n",
+      "Simple is better than complex.\n",
+      "Complex is better than complicated.\n",
+      "Flat is better than nested.\n",
+      "Sparse is better than dense.\n",
+      "Readability counts.\n",
+      "Special cases aren't special enough to break the rules.\n",
+      "Although practicality beats purity.\n",
+      "Errors should never pass silently.\n",
+      "Unless explicitly silenced.\n",
+      "In the face of ambiguity, refuse the temptation to guess.\n",
+      "There should be one-- and preferably only one --obvious way to do it.\n",
+      "Although that way may not be obvious at first unless you're Dutch.\n",
+      "Now is better than never.\n",
+      "Although never is often better than *right* now.\n",
+      "If the implementation is hard to explain, it's a bad idea.\n",
+      "If the implementation is easy to explain, it may be a good idea.\n",
+      "Namespaces are one honking great idea -- let's do more of those!\n"
+     ]
+    }
+   ],
    "source": [
     "# show the code guidelines for Python\n",
+    "# oh this below will show you the zen of python\n",
     "import this"
    ]
   },
@@ -163,21 +192,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on built-in function max in module builtins:\n",
+      "\n",
+      "max(...)\n",
+      "    max(iterable, *[, default=obj, key=func]) -> value\n",
+      "    max(arg1, arg2, *args, *[, key=func]) -> value\n",
+      "    \n",
+      "    With a single iterable argument, return its biggest item. The\n",
+      "    default keyword-only argument specifies an object to return if\n",
+      "    the provided iterable is empty.\n",
+      "    With two or more arguments, return the largest argument.\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# what does the print() function ?\n",
-    "help(print)"
+    "help(max)\n",
+    "max([0, 2])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this is a String (a String a characters)\n"
+     ]
+    }
+   ],
    "source": [
-    "print('Hello world')"
+    "print('this is a String (a String a characters)')"
    ]
   },
   {
@@ -193,12 +259,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hey\n",
+      "you\n",
+      "there\n"
+     ]
+    }
+   ],
    "source": [
     "print('hey') #first instruction\n",
-    "print('you') #second instruction (order is important)"
+    "print('you') #second instruction (order is important)\n",
+    "print('there') # econd instruction print('uriirfuzeoi')"
    ]
   },
   {
@@ -220,26 +297,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Anna SGAR\n"
+     ]
+    }
+   ],
    "source": [
-    "name = 'Gaël'\n",
+    "name = 'Anna SGAR'\n",
     "print(name)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ZAK\n",
+      "Aleksander\n",
+      "Guibon Aleksander\n"
+     ]
+    }
+   ],
    "source": [
     "# variables values\n",
-    "lastname = 'Guibon'\n",
-    "firstname = 'Gaël'\n",
+    "firstname = 'ZAK'\n",
+    "lastname = 'Aleksander'\n",
     "print(lastname)\n",
     "print(firstname)\n",
-    "lastname = firstname\n",
+    "lastname = 'Guibon'\n",
     "print(lastname, firstname) # multiple arguments can be passed into print function. \n",
     "# They will automatically be separated by a space."
    ]
@@ -259,12 +354,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['False', 'None', 'True', 'and', 'as', 'assert', 'break', 'class', 'continue', 'def', 'del', 'elif', 'else', 'except', 'finally', 'for', 'from', 'global', 'if', 'import', 'in', 'is', 'lambda', 'nonlocal', 'not', 'or', 'pass', 'raise', 'return', 'try', 'while', 'with', 'yield']\n"
+     ]
+    }
+   ],
    "source": [
     "import keyword # import libraries. this one is a standard library\n",
-    "print(keyword.kwlist)"
+    "print(keyword.kwlist) "
    ]
   },
   {
@@ -288,9 +391,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "can't assign to operator (<ipython-input-21-8cbbbccc414d>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-21-8cbbbccc414d>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    my-super-username = 'Robert' # known as KebabCase\u001b[0m\n\u001b[0m                                                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m can't assign to operator\n"
+     ]
+    }
+   ],
    "source": [
     "# Python does not accept this kind of variable name\n",
     "my-super-username = 'Robert' # known as KebabCase"
@@ -298,9 +410,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-22-8549279bb087>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-22-8549279bb087>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    1_does_not_work = 'bad name'\u001b[0m\n\u001b[0m                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "1_does_not_work = 'bad name'"
    ]
@@ -311,6 +432,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "student_name_for_gbba_group_a = 'Monica'\n",
+    "\n",
     "# Use this instead\n",
     "mySuperUsername = 'Robert' # known as CamelCase\n",
     "# or this\n",
@@ -333,15 +456,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
    "source": [
-    "2 + 5 "
+    "sum_result = 2 + 5\n",
+    "print(sum_result)"
    ]
   },
   {
@@ -357,13 +489,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "3 - 2"
    ]
@@ -381,13 +524,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "2 * 3"
    ]
@@ -405,13 +559,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6.0"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "36 / 6"
    ]
@@ -429,13 +594,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "36 % 8"
    ]
@@ -449,9 +625,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "3 // 2"
    ]
@@ -469,14 +656,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "scrolled": true,
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "400"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "10 ** 2 * 4"
    ]
@@ -495,13 +693,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6.0"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "36 / (2*3)"
    ]
@@ -519,13 +728,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "a = 3\n",
-    "b = 2\n",
-    "print(a*b)"
+    "type(a)\n",
+    "\n"
    ]
   },
   {
@@ -564,15 +784,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'hello Hsin-Ying'"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "\"Hello\" + 1"
+    "'hello' + ' ' + 'Hsin-Ying' "
    ]
   },
   {
@@ -586,9 +817,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n",
+      "<class 'int'>\n",
+      "<class 'bool'>\n",
+      "<class 'float'>\n"
+     ]
+    }
+   ],
    "source": [
     "print( type('hello world') )\n",
     "print( type(23) )\n",
@@ -611,26 +853,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "int(3.14159265359) # transforms a float into an integer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello1'"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"Hello\" + str(1) # transforms an integer into a String and concatenate both Strings"
    ]
@@ -640,31 +904,53 @@
    "metadata": {},
    "source": [
     "# Strings Operations\n",
-    "* Concaténate Strings: `+`"
+    "* Concatenate Strings: `+`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Helloworld'"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"Hello\" + \"world\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello world'"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"Hello\" + \" \" + \"world\""
    ]
@@ -728,19 +1014,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "' this is a multiline String\\nI can put a huge text between 3 simple or double quotes'"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "''' this is a multiline String\n",
-    "I can put a huge text between 3 simple or double quotes'''"
+    "I can put a huge text between '' ' \"\"\"\"\"\" 3 simple or double quotes'''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "' Works with tripple double quotes'"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\" Works with tripple double quotes\"\"\""
    ]
@@ -767,6 +1075,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Iris\n"
+     ]
+    }
+   ],
+   "source": [
+    "studentName = 'Iris'\n",
+    "if studentName == 'Iris':\n",
+    "    print('Hello', studentName)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -783,28 +1110,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "False\n",
+      "<class 'bool'>\n"
+     ]
+    }
+   ],
    "source": [
-    "x = 4\n",
+    "x = 1\n",
+    "print(x == 3)\n",
+    "print( x == 4/5+293939)\n",
+    "print( type(x < 30) )\n",
     "if x > 3:\n",
     "    print(\"x equals \", x, \"and is it greater than 4?\", x>3) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nope x is not greater than 3\n"
+     ]
+    }
+   ],
    "source": [
     "if x > 3:\n",
     "    print(\"yes x is greater than 3\")\n",
@@ -828,14 +1176,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x is between 4 and 5\n"
+     ]
+    }
+   ],
    "source": [
+    "x = 4 \n",
     "if x > 3 and x <= 5:\n",
     "    print(\"x is between 4 and 5\" )   \n",
     "elif x > 5:\n",
@@ -859,14 +1216,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "sentence = 'I want to eat something!'\n",
     "print( 'eat' in sentence )\n",
     "print( 'eat' not in sentence )\n",
-    "print( 'hello' not in sentence )"
+    "print( 'hello' not in sentence )\n",
+    "if condition :\n",
+    "    if condition:\n",
+    "        if condition:"
    ]
   },
   {
@@ -892,9 +1262,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Player One, what's your name?\n",
+      "Bianca-Lin\n",
+      "Welcome Bianca-Lin\n",
+      "Your are in a tiny room. Humidity fills the air but your stomach reminds you that you are very hungry.\n",
+      "\n",
+      "You are in front of two doors. Behind the first one you can hear muffled voices. \n",
+      "\n",
+      "Behind the second one you can smell something intriguing.\n",
+      "Which door do you choose? Type \"first\" for the first room and \"second\" for the second room.\n",
+      "second\n",
+      "Upon opening the door, you can see a huge fest with exquisite meals everywhere.\n"
+     ]
+    }
+   ],
    "source": [
     "# Examples\n",
     "# Get the input function and display a greeting message\n",
@@ -911,9 +1299,14 @@
     "print('Which door do you choose? Type \"first\" for the first room and \"second\" for the second room.')\n",
     "selection = input()\n",
     "if selection == 'first':\n",
-    "    print('Game Over! Try again', playerName)\n",
+    "    print('A dragon is looking at you. You feel like he wants to devour your soul!!')\n",
+    "    print('You have two options : close the door (type \"close\") or go for it (type \"go\")')\n",
+    "    print('Which option do you choose?')\n",
+    "    option = input()\n",
+    "    if option == 'go'\n",
     "elif selection == 'second':\n",
-    "    print('Upon opening the door, you can see a huge fest with exquisite meals everywhere.')\n"
+    "    print('Upon opening the door, you can see a huge fest with exquisite meals everywhere.')\n",
+    "    \n"
    ]
   },
   {
