added RPG2 and small fixes

--- a/session2/python-2.ipynb
+++ b/session2/python-2.ipynb
@@ -93,7 +93,10 @@
     "students = list(['Brice','Ghita', 'Joshua', 'Maty', 'Quynh Chi', 'Julien']) # overkill !\n",
     "\n",
     "# access\n",
-    "students[0] # access element by index"
+    "students[0] # access element by index\n",
+    "print(students[3])\n",
+    "studentOne = students[0]\n",
+    "print('student One =', studentOne)"
    ]
   },
   {
@@ -105,10 +108,12 @@
     "# A list is a type\n",
     "print( type( [ 'monday', 'tuesday', 'wednesday' ] ) )\n",
     "\n",
-    "# A list can have multiple types\n",
-    "superList = [ 'monday', 0, 23.5, 'hi!']\n",
+    "# A list can have multiple types \n",
+    "superList = [ 'monday', 0, 23.5, 'hi!', ['value1', 'value2'] ]\n",
     "print(type(superList[0]), type(superList[1]), type(superList[2]) )\n",
-    "\n"
+    "\n",
+    "userList = [ ['Brice', 'Magarian', 19], ['Ghita', 'Mouyass', 19] ]\n",
+    "print(userList[0])"
    ]
   },
   {
@@ -161,7 +166,7 @@
    "outputs": [],
    "source": [
     "# init\n",
-    "students = ['Brice','Ghita', 'Joshua', 'Maty', 'Quynh Chi', 'Julien']"
+    "students = ['Brice','Ghita', 'Joshua', 'Maty', 'Quynh Chi', 'Julien', 'Pierre Alain']"
    ]
   },
   {
@@ -197,8 +202,8 @@
    "outputs": [],
    "source": [
     "# delete and return the last element\n",
-    "mekhla = students.pop()\n",
-    "print(mekhla)"
+    "monica = students.pop()\n",
+    "print(monica)"
    ]
   },
   {
@@ -207,6 +212,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "students.append(monica)\n",
+    "students.append(monica)\n",
     "# remove first element with this value\n",
     "students.remove('Monica')\n",
     "print(students)"
@@ -246,7 +253,9 @@
    "outputs": [],
    "source": [
     "# print the size of the list (i.e. number of students)\n",
-    "print( len( students ) )"
+    "print( len( students ) )\n",
+    "sliceOfStudents = students[2:]\n",
+    "print(len(sliceOfStudents))"
    ]
   },
   {
@@ -269,8 +278,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# get last 3 elements\n",
-    "students[3:]"
+    "# get all except first 3 elements\n",
+    "students[3:]\n",
+    "# get the last 3 elements\n",
+    "students[-3:]"
    ]
   },
   {
@@ -328,7 +339,7 @@
     "i = 0\n",
     "while i < 5:\n",
     "    print(i) \n",
-    "    i = i + 1  # need to change the value or else the condition will never be true and the loop while never stop"
+    "    i = i + 2  # need to change the value or else the condition will never be true and the loop while never stop"
    ]
   },
   {
@@ -349,8 +360,13 @@
    "outputs": [],
    "source": [
     "# for loop\n",
+    "print(students)\n",
+    "briceFound = False\n",
     "for student in students: # will iterate oveer the students in order\n",
-    "    print(student)"
+    "    if student == 'Brice': \n",
+    "        if briceFound: continue\n",
+    "        briceFound = True  \n",
+    "    print('Student name = ', student)"
    ]
   },
   {
@@ -417,12 +433,18 @@
     "choices = ['adopt', 'kill', 'run'] \n",
     "choice = \"\"\n",
     "while choice not in choices:\n",
-    "    choice = input()\n",
-    "    print(\"not recognized, please type one of the following options\", choices)\n",
+    "    choice = input('choose smth:')\n",
     "    if(choice == 'quit'):\n",
+    "        print('No stay with meeeee!')\n",
     "        break\n",
     "    elif choice == 'adopt':\n",
-    "        print('You adopted the dog')"
+    "        print('You adopted the dog')\n",
+    "    elif choice =='kill':\n",
+    "        print('Why do you do this?!! Murderer !!')\n",
+    "    elif choice == 'run':\n",
+    "        print(\"The puppy follows you anyway. You don't have any choice!\" )\n",
+    "    else:\n",
+    "        print(\"not recognized, please type one of the following options\", choices)"
    ]
   },
   {
@@ -444,12 +466,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for student in ['Brice','Ghita', 'Joshua', 'Maty', 'Quynh Chi', 'Julien']:\n",
+    "students = ['Ghita', 'Joshua', 'Maty', 'Quynh Chi', 'Julien', 'Sabyasache']\n",
+    "for student in students:\n",
     "    if student != 'Julien':\n",
     "        print(student, 'is not Julien!')\n",
-    "        break # try it with 'continue' instead\n",
     "    else:\n",
-    "        print('found him!')"
+    "        print('found him!')\n",
+    "        break\n",
+    "print( students[ students.index('Julien') ] )\n",
+    "        \n"
    ]
   },
   {
@@ -494,6 +519,7 @@
     "    You are in front of two doors. Behind the first one you can hear muffled voices. \n",
     "    Behind the second one you can smell something intriguing.''')\n",
     "    print('Which door do you choose? Type', choices[0], 'for the first room and', choices[1], 'for the second room.')\n",
+    "    print('Type one of the choices:', choices)\n",
     "    choice = input()\n",
     "    if choice == 'first':\n",
     "        print('Game Over! Try again', playerName)\n",
