--- a/session3/python-3.ipynb
+++ b/session3/python-3.ipynb
@@ -87,10 +87,10 @@
    "outputs": [],
    "source": [
     "# more concrete example\n",
-    "player = { \"name\":\"gaël\", \"health\":200 }\n",
+    "player = { \"name\":\"Jyl\", \"health\":200 }\n",
     "print(player)\n",
     "\n",
-    "student = {'name':'zhanyi', 'age'.... 'friends':['friend1', 'friend2'] }"
+    "student = {'name':'Adrien', 'age':19, 'friends':['friend1', 'friend2'] }"
    ]
   },
   {
