small fixes + memo3 added

--- a/session3/python-3.ipynb
+++ b/session3/python-3.ipynb
@@ -90,7 +90,8 @@
     "player = { \"name\":\"Jyl\", \"health\":200 }\n",
     "print(player)\n",
     "\n",
-    "student = {'name':'Adrien', 'age':19, 'friends':['friend1', 'friend2'] }"
+    "student = {'name':'Adrien', 'age':19, 'friends':['friend1', 'friend2'] }\n",
+    "print(student)"
    ]
   },
   {
@@ -114,7 +115,8 @@
    "source": [
     "player[\"name\"] = 'whatever'\n",
     "print(player['name'])\n",
-    "print(player)"
+    "print(player)\n",
+    "print( player['health'] )"
    ]
   },
   {
@@ -125,6 +127,7 @@
    "source": [
     "# get the list of keys\n",
     "print( list( player.keys() ) )\n",
+    "print( player.keys())\n",
     "\n",
     "# get the list of values\n",
     "print( list( player.values() ) )\n"
@@ -187,14 +190,14 @@
    "outputs": [],
    "source": [
     "# first populate the dict\n",
-    "# player = {'name':'gael',   'inventory': ['rose', 'pencil', 'smartphone'],   'grade':'noob'}\n",
+    "# player = {'name':'maty',   'inventory': ['rose', 'pencil', 'smartphone'],   'grade':'noob'}\n",
     "player = dict()\n",
-    "player['name'] = 'gael'\n",
+    "player['name'] = 'maty'\n",
     "player['inventory'] = ['rose', 'pencil', 'smartphone']\n",
     "player['grade'] = 'noob'\n",
     "print('player =', player)\n",
     "# get list of keys\n",
-    "print( player.keys(), type(player.keys()), len(player.keys()) )\n",
+    "print( player.keys(), type(list(player.keys())), len(player.keys()) )\n",
     "# get list of values\n",
     "print( player.values(), type(player.values()), len(player.values()) )"
    ]
@@ -207,7 +210,7 @@
     }
    },
    "source": [
-    "### Check if a key exist:"
+    "### Check if a key exists:"
    ]
   },
   {
@@ -269,7 +272,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "player.setdefault('age', 20)\n",
+    "player.setdefault('age', 0)\n",
     "print(player)"
    ]
   },
@@ -336,19 +339,20 @@
    "source": [
     "# example\n",
     "user = {\n",
-    "    'name': 'john', # str()\n",
+    "    'name': 'Luis-Felipe', # str()\n",
     "    'age': 19, # int()\n",
-    "    'money': 24.56, # float()\n",
+    "    'money': 24000.56, # float()\n",
     "    'job': 'student', # str()\n",
     "    'friends': ['jack', 'paul'], # list() of two str()\n",
     "    'stats': {\n",
-    "        'social': 'friendly', # str()\n",
-    "        'seriousness': 'bad', # str()\n",
+    "        'social': 'very friendly', # str()\n",
+    "        'seriousness': 'Perfect', # str()\n",
     "        'formerEmployeee': False # bool()\n",
     "    } # dict()\n",
     "} # dict()\n",
     "\n",
-    "print(user)"
+    "print(user) \n",
+    "print(user['stats']['social'])"
    ]
   },
   {
@@ -407,7 +411,7 @@
     "    choice = input()\n",
     "    if choice in events.keys():\n",
     "        pastEvents.append(choice)\n",
-    "        if type(events[choice]['message']) == str():\n",
+    "#         if type(events[choice]['message']) == str():\n",
     "        if 'messages' in events[choice]:\n",
     "            for message in events[choice]['messages']:\n",
     "                print(message)\n",
@@ -417,6 +421,18 @@
     "        print('WRONG : Possible choices', list(events.keys()) )\n",
     "\n",
     "print(pastEvents)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "user = {'job': 'student'}\n",
+    "print('before',user)\n",
+    "user['job'] = 'teacher'\n",
+    "print('after',user)"
    ]
   },
   {
@@ -499,7 +515,9 @@
     "    This superb function needs 2 arguments.\n",
     "    It returns None (such a shame! this function is still useless)\n",
     "    \"\"\"\n",
-    "    return None"
+    "    return None\n",
+    "\n",
+    "print( mySuperbFunction('hey') )\n"
    ]
   },
   {
@@ -563,8 +581,8 @@
     "    return {'name':name, 'age':age, 'grade':grade}\n",
     "\n",
     "# now use it\n",
-    "print( createStudent(19, 20) )\n",
-    "print( createStudent( 19, 20, name='superStudent' ) )\n",
+    "# print( createStudent(19, 20) )\n",
+    "print( createStudent( 19, 20, name='Anna' ) )\n",
     "# as you can see, the name arg is optional"
    ]
   },
