--- a/session2/python-2.ipynb
+++ b/session2/python-2.ipynb
@@ -697,6 +697,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "while name == 'hugo':"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
