--- a/session4/python-4.ipynb
+++ b/session4/python-4.ipynb
@@ -89,7 +89,10 @@
     "- Behavior attributes\n",
     "    - Does it bites?\n",
     "    - What kind of sound does it makes?\n",
-    "    - Level of agressiveness: low, medium or high"
+    "    - Level of agressiveness: low, medium or high\n",
+    "    - Does it barks?\n",
+    "    - Does it meow?\n",
+    "    - Is it a wild animal?"
    ]
   },
   {
@@ -112,7 +115,10 @@
     "        'agressiveness': 'low'\n",
     "    }\n",
     "}\n",
-    "print(cat)"
+    "print(cat)\n",
+    "cat['behavior']['barks'] = False\n",
+    "print(cat)\n",
+    "cat['behavior']['isWild'] = True"
    ]
   },
   {
@@ -214,7 +220,7 @@
    "outputs": [],
    "source": [
     "print( 'dog before removal', dog)\n",
-    "del dog['physical']['animal'] \n",
+    "del dog['physical']['animal']\n",
     "print( 'dog after removal', dog)"
    ]
   },
@@ -228,6 +234,8 @@
    "source": [
     "## Going deeper in nested dictionaries\n",
     "\n",
+    "![alt text](deeper.png \"Logo Title\")\n",
+    "\n",
     "Create a dictionary for *livingThings*: two fields: \n",
     "- animals\n",
     "    - instances (list)\n",
@@ -238,17 +246,34 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
     "livingThings = {\n",
     "    'animals': {\n",
-    "        'instances': list()\n",
+    "        'instances': list() # list of dictionaries\n",
     "    },\n",
     "    'humans': {\n",
     "        'instances': list()\n",
+    "    },\n",
+    "    'students': {\n",
+    "        'instances': [\n",
+    "            {\n",
+    "                'firstname': 'Brice',\n",
+    "                'lastname': 'MAGARIAN',\n",
+    "                'email': 'B00757961@essec.edu',\n",
+    "                'hasAvatar': True\n",
+    "            }\n",
+    "        ]\n",
     "    }\n",
     "}\n",
+    "\n",
+    "ishita = {'firstname': 'Ishita','lastname': 'Parikh','email': 'B00757961@essec.edu','hasAvatar': True}\n",
+    "livingThings['students']['instances'].append(ishita)\n",
     "\n",
     "print( livingThings )"
    ]
@@ -353,7 +378,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "me = {'firstName':'Gaël', 'lastName':'Guibon', 'favoriteFood':'Lytchee', 'sweetTooth':'ofc', 'preferredAnimal': 'dog'}"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -429,6 +456,7 @@
    "source": [
     "def mySuperbFunction(arg1, arg2):\n",
     "    \"\"\" \n",
+    "    Creates an new AlphaGo\n",
     "    This superb function needs 2 arguments.\n",
     "    It returns None (such a shame! this function is still useless)\n",
     "    \"\"\"\n",
@@ -453,11 +481,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def sumItUp(arg1, arg2, arg3):\n",
-    "    \"\"\"\n",
-    "    Well, this is but a sum of the 3 args.\n",
-    "    \"\"\"\n",
-    "    return arg1 + arg2 + arg3"
+    "def avg(listOfNumbers):\n",
+    "    ''' This computes the mean of a given list of numerical values  '''\n",
+    "    return sum(listOfNumbers) / len(listOfNumbers)\n",
+    "dogAges = [4,7]\n",
+    "print( avg(dogAges) )\n"
    ]
   },
   {
@@ -494,7 +522,8 @@
     "def createStudent( age, grade, name='noname'):\n",
     "    \"\"\" This creates a student dict with default name as 'noname' \"\"\"\n",
     "    return {'name':name, 'age':age, 'grade':grade}\n",
-    "\n",
+    "roxane = createStudent(19, )\n",
+    "print(roxane)\n",
     "# now use it\n",
     "print( createStudent(19, 20) )\n",
     "print( createStudent( 19, 20, name='superStudent' ) )\n",
@@ -539,14 +568,15 @@
    "outputs": [],
    "source": [
     "def showGroup(groupName, *students, **infos):\n",
-    "    print('group', groupName)\n",
-    "    print('Students:')\n",
+    "    print('group = ', groupName)\n",
+    "    print('='*5, 'Students', '='*5)\n",
     "    for student in students:\n",
     "        print(student)\n",
-    "    print('Infos')\n",
+    "    print('='*5, 'Info', '='*5)\n",
     "    for status, number in infos.items():\n",
     "        print(status, number)\n",
-    "showGroup('B2', 'Shuyi', 'Vincent', 'Alizé', 'Mehdi', pythonLovers=2, superStudents=4)"
+    "belovedStudents = ['Brice','Ghita','Joshua','Maty','Quynh Chi','Julien','Monica','Enora','Ishita','Luis-Felipe','Bianca-Lin','Hugo','Hugo','Alexandre','Olivia Maya','Sabyasache','Anna','Jyl','Giulia','Pierre-Alain','Pierre-Antoine','Adrien','Hsin-Ying','Annaëlle','Roxane','Pauline','Domitille','Ilona','Nanxi','Julia','Iris','Aleksander']\n",
+    "showGroup('the best group', belovedStudents[15], belovedStudents[31], pythonLovers=2, superStudents=len(belovedStudents))"
    ]
   },
   {
@@ -574,7 +604,9 @@
     "def doThis(myVar):\n",
     "    scopedVar = 'I am defined inside a function'\n",
     "    globalVar = 'yes' # available because it is global\n",
+    "    print(scopedVar)\n",
     "    return True\n",
+    "print(scopedVar)\n",
     "   "
    ]
   },
@@ -645,7 +677,8 @@
     "        'paths': {\n",
     "            'yes': { 'message': 'You ate poison and lost 20 hp', 'hploss': 20},\n",
     "            'no': { 'message': 'You are still hungry and lose a bit of hp from hunger', 'hploss': 10}\n",
-    "        }}\n",
+    "        }\n",
+    "    }\n",
     "}\n",
     "pastChoices = []  \n",
     "\n",
@@ -671,7 +704,7 @@
     "                alive = removeHealth(event[choice]['hploss'])\n",
     "                if not alive : break\n",
     "            pastChoices.append(choice)\n",
-    "            if('paths' in event[choice]):\n",
+    "            if 'paths' in event[choice]:\n",
     "                askAction(event[choice]['paths'], list(event[choice]['paths'].keys()) )\n",
     "        else:\n",
     "            print('WRONG : Possible choices', choices )\n",
@@ -688,6 +721,27 @@
     "print('You finished playing the game. Here are your past actions :', pastChoices)\n",
     "print('Here are your remaining stats', player)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# I define enora as a dictionary\n",
+    "enora = {'name':'enora'}\n",
+    "# now, I print enora (hey future enora, don't forget to separate values by commas !!!!!!!!!)\n",
+    "# print(enora)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
