--- a/session5/python-5.ipynb
+++ b/session5/python-5.ipynb
@@ -158,7 +158,7 @@
     "myFile = open('test.txt', 'r') # open an existing file with 'r' (r = read)\n",
     "fileContent = myFile.read() # put the content into a variable\n",
     "myFile.close()\n",
-    "print(fileContent, type(fileContent)) # display the content"
+    "print(fileContent) # display the content"
    ]
   },
   {
@@ -178,7 +178,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "myFile = open('test.txt', 'a') # a = append\n",
+    "myFile = open('test.txt', 'a') # a = append w = write r = read\n",
     "myFile.write('\\nAnd Java !')\n",
     "myFile.close()"
    ]
@@ -223,11 +223,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('test.txt', 'a') as myFile:\n",
-    "    myFile.write('hey it works !')\n",
-    "# leaving the with indentation auto-close the file\n",
-    "with open('test.txt', 'r') as myFile:\n",
-    "    print( myFile.read() )"
+    "# with open('students.txt', 'w') as f:\n",
+    "#     f.write('Students:\\n')\n",
+    "\n",
+    "# students = ['Aleksander', 'Roxane', 'Hugo', 'Giulia']\n",
+    "# with open('students.txt', 'a') as f:\n",
+    "#     for student in students:\n",
+    "#         f.write(student + '\\n')\n",
+    "\n",
+    "with open('students.txt', 'r') as f:\n",
+    "    print( f.read() )\n",
+    "    \n",
+    "    \n"
    ]
   },
   {
@@ -291,6 +298,7 @@
    "source": [
     "myFile = open('test.json', 'r')\n",
     "content = myFile.read()\n",
+    "myFile.close()\n",
     "print(type(content))\n",
     "print(content)"
    ]
@@ -316,8 +324,8 @@
     "myFile = open('test.json', 'r')\n",
     "content = json.load(myFile)\n",
     "print(type(content))\n",
-    "#print(content)\n",
-    "print(content['run'])"
+    "print(content)\n",
+    "print(content['run']) \n"
    ]
   },
   {
@@ -411,12 +419,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "del cake\n",
+    "# del cake\n",
+    "cake = 'yummy'\n",
     "try:\n",
     "    print( cake )\n",
     "except:\n",
-    "    print( 'A problem occurred!')\n",
-    "    print( 'the error is', sys.exc_info()[0])"
+    "    print('I crashed! Shame on me uh?')\n",
+    "#     print( 'A problem occurred!')\n",
+    "#     print( 'the error is', sys.exc_info()[0])"
    ]
   },
   {
@@ -438,8 +448,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "try:\n",
-    "    print(cake)\n",
+    "    print( float('0.00000') )\n",
     "except NameError :\n",
     "    print( 'name error catched' )\n",
     "    pass\n",
@@ -468,7 +479,7 @@
    "source": [
     "print('Enter your group name')\n",
     "name = input()\n",
-    "if name != 'B2':\n",
+    "if name != 'A2':\n",
     "    raise ValueError('Not the name I was waiting for!')"
    ]
   },
@@ -489,6 +500,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "cake = 'yummy'\n",
     "try:\n",
     "    print(cake)\n",
     "except NameError :\n",
@@ -565,13 +577,14 @@
    },
    "outputs": [],
    "source": [
-    "# Example with dict and  ba sic functions and health management\n",
+    "# Example with dict  and  ba sic functions and health management\n",
     "# Placeholders for you to insert requested code\n",
     "player = dict()\n",
     "print(\"Hello Player One, what's your name?\")\n",
     "player['name'] = input()\n",
     "player['health'] = 200\n",
     "print(\"Welcome\", player['name'])\n",
+    "\n",
     "\n",
     "def retrieveEventsFromJson(jsonPath):\n",
     "    \"\"\" \n",
